--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -157,11 +157,19 @@ RK3566 TX66 配套5V适配器
 
 
 
-2. 
+2. 修改镜像烧录工具语言
+
+
+
+
+
+3. 打开烧录工具
 
 ![image-20231017111858559](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231017111858559.png)
 
 
+
+4. 烧录工具界面如下
 
 ![image-20230526154741821](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154741821.png)
 
