--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -204,12 +204,14 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ### 开发板进入烧录模式(Pic)
 
+烧录镜像 必须使开发板进入烧录模式
+
 操作步骤：
 
 1. Window电脑上打开烧录工具（参考以上说明安装烧录工具）
 2. 开发板OTG接口 连接 电脑USB接口
 3. 保持长按 RECOVERY按键，并且连接DC电源供电接口
-4. 查看烧录工具是否正常识别Loader设备
+4. 查看 镜像烧录工具 是否正常识别Loader设备
 5. 若正常识别到Loader设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
 
 
