--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -46,7 +46,7 @@
 
 
 
-#### 电源适配器
+**电源适配器**
 
 RK3568 K1 配套12V适配器
 
@@ -56,23 +56,23 @@ RK3566 TX66 配套5V适配器
 
 
 
-####  USB AtoC烧录线
+**USB AtoC烧录线**
 
 配件连接图片
 
 
 
-#### 调试串口线
+**调试串口线**
 
 硬件配件连接图片
 
 
 
-#### 显示/触摸屏
+**显示/触摸屏**
 
 
 
-#### MIPI摄像头
+**MIPI摄像头**
 
 
 
