--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -4,7 +4,7 @@
 
 
 
-## CPU基本信息
+## 1. CPU基本信息
 
 ### RK3566
 
@@ -18,7 +18,7 @@
 
 
 
-## 开发板基本信息(Pic)
+## 2. 开发板基本信息(Pic)
 
 板卡照片（带功能标注）
 
@@ -40,7 +40,7 @@
 
 
 
-## 配件说明(Pic)
+## 3. 配件说明(Pic)
 
 常用配件有适配器、USB烧录线、调试串口线，其他配件可自行选购
 
@@ -78,7 +78,7 @@ RK3566 TX66 配套5V适配器
 
 
 
-## 网盘资料
+## 4. 网盘资料
 
 **百度网盘地址**：https://pan.baidu.com/s/1erEpYjwWEEczJcgJJmrhjQ?pwd=1234   提取码：1234
 
