--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -80,6 +80,10 @@ RK3566 TX66 配套5V适配器
 
 ## 4. 网盘资料
 
+KICKPI 开发资料通过网盘方式推送，同时支持百度网盘、OneDrive
+
+两份网盘资料内容一致，可根据实际情况自行选择
+
 [百度网盘地址](https://pan.baidu.com/s/1erEpYjwWEEczJcgJJmrhjQ?pwd=1234)
 
 [OneDrive网盘地址](https://1drv.ms/f/s!AuVepzkLS2sQg40ELt1V77H-aKn_Sw?e=womwYI)
