--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -80,7 +80,7 @@ RK3566 TX66 配套5V适配器
 
 ## 4. 网盘资料
 
-KICKPI 开发资料通过网盘方式推送，同时支持百度网盘、OneDrive
+KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDrive网盘
 
 两份网盘资料内容一致，可根据实际情况自行选择
 
