--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -122,23 +122,23 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 ## 5. 技术交流/售后支持
 
-客服QQ号：1965516829
+KICKPI 官方店铺链接
+
+[淘宝店铺链接]()
+
+[阿里巴巴店铺链接](https://shop122g2107958t7.1688.com/page/index.html?spm=0.0.wp_pc_common_header_companyName_undefined.0)
+
+
+
+
+
+**客服QQ号**：1965516829
 
 ![image-20231018142032347](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231018142032347.png)
 
 
 
-技术交流QQ群：541550817
+**技术交流QQ群**：541550817
 
 ![image-20231018142017914](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231018142017914.png)
-
-
-
-淘宝店铺
-
-
-
-
-
-1688店铺
 
