--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -122,7 +122,7 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 ## 5. 技术交流/售后支持
 
-KICKPI 官方店铺链接
+**KICKPI 官方店铺链接**
 
 [淘宝店铺链接](https://shop183733283.taobao.com/?spm=a230r.7195193.1997079397.2.10f76f498zHqMG)
 
@@ -130,11 +130,9 @@ KICKPI 官方店铺链接
 
 
 
-
-
 **客服QQ号**：1965516829
 
-![image-20231018142032347](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231018142032347.png)
+![image-20231018142716705](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231018142716705.png)
 
 
 
