--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -19,7 +19,7 @@
 | LED灯               | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
 | USB HOST            | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       | USB3.0 HOST X2                                               |
 | USB OTG             | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
-| IR接收器            | Y                                                            | N                                                            |
+| 红外接收器          | Y                                                            | N                                                            |
 | 实时时钟            | Y（HYM8563）                                                 | N                                                            |
 | 调试串口            | Y                                                            | Y                                                            |
 | 按键                | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
@@ -28,7 +28,7 @@
 | MIPI DSI显示接口    | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
 | LVDS显示接口        | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
 | EDP显示接口         | X1（up to 2560x1600@60Hz ）                                  | N                                                            |
-| MIPI摄像头          | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
+| MIPI CSI摄像头      | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
 | 喇叭                | Y（Max Power 5W）                                            | Y（Max Power 5W）                                            |
 | 耳机                | Y                                                            | N                                                            |
 | 麦克风              | Y                                                            | N                                                            |
