--- a/rk356x/zh/05-硬件工厂测试.md
+++ b/rk356x/zh/05-硬件工厂测试.md
@@ -4,10 +4,41 @@
 
 
 
-硬件工厂测试
+硬件工厂测试 是基于DeviceTest 应用程序 的快速硬件功能测试
 
 
+
+
+
+## 进入硬件测试程序
+
+步骤：
+
+1. 打开系统应用列表中的 计算器
+2. 计算器输入 "000.=" 字符
+3. 选择 "DeviceTest" ，并且点击Just once 或 Always
+4. 硬件测试程序启动界面
 
 
 
 ![image-20231021114933026](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021114933026.png)
+
+
+
+
+
+
+
+![screen](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/screen.png)
+
+
+
+
+
+![image-20231021140008929](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021140008929.png)
+
+
+
+
+
+![screen](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/screen.png)
