--- a/rk356x/zh/06-硬件老化测试.md
+++ b/rk356x/zh/06-硬件老化测试.md
@@ -2,3 +2,40 @@
 
 
 
+
+
+## 进入硬件老化程序
+
+步骤：
+
+1. 打开系统应用列表中的 计算器
+2. 计算器输入 "000.=" 字符
+3. 选择 "DeviceTest" ，并且点击Just once 或 Always
+4. 硬件测试程序启动界面
+
+
+
+![image-20231021114933026](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021114933026.png)
+
+
+
+
+
+
+
+![screen](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/screen.png)
+
+
+
+
+
+![image-20231021140838546](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021140838546.png)
+
+
+
+![image-20231021140920296](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021140920296.png)
+
+
+
+
+
