--- a/rk356x/zh/06-硬件老化测试.md
+++ b/rk356x/zh/06-硬件老化测试.md
@@ -6,6 +6,27 @@
 
 
 
+## 拷贝VPU测试视频
+
+VPU老化测试项 需要拷贝 视频文件 到 系统 或SD卡的指定目录，老化程序会对视频进入解码测试
+
+
+
+**视频文件要求：**视频文件名称 和 视频文件路径 必须跟以下一致
+
+```
+/sdcard/Aging_Test_Video.mp4
+```
+
+
+
+下面说明 拷贝视频的两个常见方法
+
+1. 通过adb push 工具推送 Aging_Test_Video.mp4 视频文件到/sdcard目录
+2. 拷贝视频文件到 U盘 或 SD卡，通过文件管理器 拷贝到/sdcard目录
+
+
+
 ## 进入硬件老化程序
 
 步骤：
