--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -5,7 +5,7 @@
 | 功能列表       | K1                                                           | K1B                                                          |
 | -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | 外观           |                                                              |                                                              |
-| PCB尺寸        | 81mm * 55mm                                                  |                                                              |
+| PCB尺寸        | 141mm * 80mm                                                 | 81mm * 55mm                                                  |
 | 重量           |                                                              |                                                              |
 | 主控           | Rockchip RK3568B2                                            | Rockchip RK3568B2                                            |
 | CPU            | 四核Cortex-A55                                               | 四核Cortex-A55                                               |
