--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -22,7 +22,7 @@
 | 红外接收器     | Y                                                            | N                                                            |
 | 实时时钟       | Y（HYM8563）                                                 | N                                                            |
 | 调试串口       | Y                                                            | Y                                                            |
-| 按键           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
+| 按键           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY<br />* POWER KEY | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
 | 扩展引脚       | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
 | HDMI显示屏     | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
 | MIPI DSI显示屏 | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
