--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -19,7 +19,7 @@
 | LED灯          | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
 | USB HOST       | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       | USB3.0 HOST X2                                               |
 | USB OTG        | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
-| 红外接收器     | Y                                                            | N                                                            |
+| 红外接收器     | Y                                                            | Y                                                            |
 | 实时时钟       | Y（HYM8563）                                                 | N                                                            |
 | 调试串口       | Y                                                            | Y                                                            |
 | 按键           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY<br />* POWER KEY | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
