--- a/h618/zh/00-开发板功能列表.md
+++ b/h618/zh/00-开发板功能列表.md
@@ -10,11 +10,10 @@
 | CPU            | 四核Cortex-A55                                               |
 | GPU            | Mali G52 2EE                                                 |
 | NPU            | RKNN 0.8Tops                                                 |
-| 内存           | 2G / 4G                                                      |
+| 内存           | 1G / 2G / 4G                                                 |
 | 存储           | 8G / 16G / 32G                                               |
 | 系统           | Android13.0 / Debian11 / Ubuntu2204                          |
-| 电源供电       | DC 12V                                                       |
-| 散热风扇       | Y（5V Power）                                                |
+| 电源供电       | TYPE-C 5V                                                    |
 | LED灯          | * Power LED<br />* Work LED                                  |
 | USB HOST       | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       |
 | USB OTG        | USB2.0 OTG X1                                                |
