--- a/h618/zh/00-开发板功能列表.md
+++ b/h618/zh/00-开发板功能列表.md
@@ -2,38 +2,29 @@
 
 
 
-| 功能列表       | K2B                                                          |
-| -------------- | ------------------------------------------------------------ |
-| 外观           |                                                              |
-| PCB尺寸        | 81mm * 55mm                                                  |
-| 主控           | Allwinner H618                                               |
-| CPU            | 四核Cortex-A55                                               |
-| GPU            | Mali G52 2EE                                                 |
-| NPU            | RKNN 0.8Tops                                                 |
-| 内存           | 1G / 2G / 4G                                                 |
-| 存储           | 8G / 16G / 32G                                               |
-| 系统           | Android13.0 / Debian11 / Ubuntu2204                          |
-| 电源供电       | TYPE-C 5V                                                    |
-| LED灯          | * Power LED<br />* Work LED                                  |
-| USB HOST       | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       |
-| USB OTG        | USB2.0 OTG X1                                                |
-| 红外接收器     | Y                                                            |
-| 实时时钟       | Y（HYM8563）                                                 |
-| 调试串口       | Y                                                            |
-| 按键           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY<br />* POWER KEY |
-| 扩展引脚       | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 |
-| HDMI显示屏     | X1（up to 4K@60Hz）                                          |
-| MIPI DSI显示屏 | X2（up to 1920x1080@60Hz ）                                  |
-| LVDS显示屏     | X1（up to 1920x1080@60Hz ）                                  |
-| EDP显示屏      | X1（up to 2560x1600@60Hz ）                                  |
-| MIPI CSI摄像头 | 4Lane X1 or 2Lane X2                                         |
-| 喇叭           | Y（Max Power 5W）                                            |
-| 耳机           | Y                                                            |
-| 麦克风         | Y                                                            |
-| WIFI/蓝牙      | Y（RTL8822CS）                                               |
-| 以太网         | 1000M X2                                                     |
-| 4G移动网络     | Y（EC20）                                                    |
-| SD卡           | Y                                                            |
-| SATA硬盘       | Y                                                            |
-| M.2硬盘        | Y                                                            |
+| 功能列表   | K2B                                                          |
+| ---------- | ------------------------------------------------------------ |
+| 外观       |                                                              |
+| PCB尺寸    | 81mm * 55mm                                                  |
+| 主控       | Allwinner H618                                               |
+| CPU        | 四核Cortex-A55                                               |
+| GPU        | Mali G52 2EE                                                 |
+| NPU        | RKNN 0.8Tops                                                 |
+| 内存       | 1G / 2G / 4G                                                 |
+| 存储       | 8G / 16G / 32G                                               |
+| 系统       | Android12.0 / Debian11 / Ubuntu2204                          |
+| 电源供电   | TYPE-C 5V                                                    |
+| LED灯      | Power LED<br />Work LED                                      |
+| USB HOST   | USB2.0 HOST X2                                               |
+| USB OTG    | USB2.0 OTG X1                                                |
+| 红外接收器 | Y                                                            |
+| 实时时钟   | HYM8563                                                      |
+| 调试串口   | Y                                                            |
+| 按键       | Recovery KEY<br />RESET KEY<br />FEL KEY                     |
+| 扩展引脚   | Extend Pin Total 20Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 |
+| HDMI显示屏 | X1（up to 4K@60Hz）                                          |
+| 耳机       | Y                                                            |
+| WIFI/蓝牙  | AW859                                                        |
+| 以太网     | 1000M                                                        |
+| SD卡       | Y                                                            |
 
