--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -35,4 +35,26 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 
 
-## 更换开机LOGO
+## 更换开机动画图片
+
+* 替换开机动画图片
+
+```
+/usr/share/plymouth/ubuntu-logo.png
+/usr/share/plymouth/themes/spinner/watermark.png
+/usr/share/plymouth/themes/spinner/bgrt-fallback.png
+```
+
+> 将自定义图片替换到以上三处路径
+>
+> 注意图片格式为PNG
+
+
+
+* 更新开机动画图片
+
+```
+$ sudo update-initramfs -u
+$ reboot
+```
+
