--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -1,10 +1,9 @@
 # 10-系统镜像烧录
 
-K2B 目前提供 Android10.0 镜像
+K5 目前提供 Android10.0 镜像
 
 Android10.0 可使用 USB烧录线 把镜像烧录到板载eMMC
 
-Ubuntu22.04 需要可把镜像烧录到SD卡，直接用SD卡启动系统 或 将SD卡的系统拷贝到eMMC
 
 
 
