--- a/a133/zh/12-硬件功能测试.md
+++ b/a133/zh/12-硬件功能测试.md
@@ -4,13 +4,13 @@
 <link rel="stylesheet" type="text/css" href="auto-number-title.css" />
 
 
-## 1. 扩展引脚 <a name="扩展引脚"></a>
+## 扩展引脚 <a name="扩展引脚"></a>
 
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
 
 ![image-20240319154848492](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319154848492.png)
 
-## 2. LED
+## LED
 
 开发板配备两个LED灯，默认状态下，绿色LED为电源指示灯，蓝色LED为心跳指示灯
 
