--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -179,6 +179,7 @@ A133 配备X路ADC，K5开发板引出ADC3通道到扩展引脚座
 
 ## FAN
 **硬件接线**
+
 风扇供电电压为5V，连接方式如下图所示
 
 ## 4G通讯模块
@@ -189,6 +190,6 @@ A133 配备X路ADC，K5开发板引出ADC3通道到扩展引脚座
 ![image-20240319182217644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image.png)
 
 ## 耳机
+**硬件接线**
 
-### 音频播放测试
 
