--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -41,19 +41,14 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 镜像文件网盘目录：
 
 ```
-├── 2-System Image 系统镜像
-    └── RK3568-K1
-        ├── Android13
-        	├── update-rk3568-kickpi-k1-android-hdmi-2023102403.img
-        ├── Debian11
-        └── Ubuntu2004
+TODO
 ```
 
 
 
 镜像名称解析
 
-![image-20231024111614065](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231024111614065.png)
+![image]()
 
 
 
