--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -103,27 +103,29 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 
 
-### 烧录工具使用
+### 烧录镜像
 
 烧录镜像 分为 完整镜像烧录 和 分区镜像烧录
 
-完整镜像烧录 常用于刷机 或 开发板更换不同系统
+**完整镜像烧录** 常用于刷机 或 开发板更换不同系统
 
-分区镜像烧录 常用于调试阶段，必须明确每个分区的作用再进行烧录，否则会导致系统损坏
+**分区镜像烧录** 常用于调试阶段，必须明确每个分区的作用再进行烧录，否则会导致系统损坏
 
 
 
 #### 烧录完整镜像
 
-![image-20230519111357204](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519111357204.png)
+1. 打开 SocToolKit.exe 软件，选择RV1106，点击OK
 
-操作步骤：
+![image-20240909114221798](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20240909114221798.png)
 
-1. 烧录工具成功识别板卡设备（若识别不到，返回上一步确认操作）
-2. 进入完整镜像烧录页面
-3. 选择镜像路径
-4. 开始烧录镜像
-5. 查看 烧录日志，烧录成功后自动重启进入系统
+2. 主板进入烧录模式，USB设备能看到设备信息
+3. 点击固件，选择 update.img 镜像的文件路径
+4. 点击升级，右侧信息框内能看到烧录信息
+
+![image-20240909114241258](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20240909114241258.png)
+
+5. 烧录成功后自动重启进入系统
 
 
 
