--- a/rv1106/zh/10-系统镜像烧录.md
+++ b/rv1106/zh/10-系统镜像烧录.md
@@ -74,8 +74,8 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 操作步骤：
 
-1. Window电脑上打开烧录工具（参考以上说明安装烧录工具）
-2. 开发板OTG接口 连接 电脑USB接口
+1. Window 电脑上打开烧录工具（参考以上说明安装烧录工具）
+2. 开发板OTG（USB-Type C）接口连接电脑 USB 接口
 3. 保持长按 RECOVERY按键，并且连接DC电源供电接口
 4. 查看 镜像烧录工具 是否正常识别Loader设备
 5. 若正常识别到Loader设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
