--- a/rv1106/zh/12-硬件功能使用说明.md
+++ b/rv1106/zh/12-硬件功能使用说明.md
@@ -28,12 +28,19 @@ sudo apt install tftpd-hpa 	tftp-hpa tftp
 
 
 
+配置信息
+
 ```
 $ cat /etc/default/tftpd-hpa
 # /etc/default/tftpd-hpa
+
 TFTP_USERNAME="tftp"
 TFTP_DIRECTORY="/srv/tftp"
 TFTP_ADDRESS=":69"
 TFTP_OPTIONS="--secure"
 ```
+
+
+
+
 
