--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -69,8 +69,6 @@ PhoenixSuit/Drivers/AW_Driver/
 1. 按住 FEL升级键
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
 
-![image-20240306170511855](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170511855.png)
-
 
 
 **打开电脑设备管理器界面**
@@ -105,7 +103,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 
 
-**打开PhoenixSuit.ext**
+**打开PhoenixSuit.exe**
 
 ![image-20240306170759670](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170759670.png)
 
