--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -109,7 +109,9 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 [  639.529122] rk_vcodec: fdf80200.rkvdec:0 session 2268:56 time: 22595 us hw 11125 us
 ```
 
+​	4K_30帧/秒：GPU占用在60%-68%左右，
 
+​	每帧解码时间测试结果log：
 
 
 
