--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -281,3 +281,25 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 
 ## Linux 音频功能测试
 
+```
+root@kickpi:~# amixer controls
+numid=14,iface=MIXER,name='Headphone Switch'
+numid=2,iface=MIXER,name='ADC Swap'
+numid=8,iface=MIXER,name='ADC volume'
+numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch'
+numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch'
+numid=7,iface=MIXER,name='DAC volume'
+numid=15,iface=MIXER,name='HpSpeaker Switch'
+numid=11,iface=MIXER,name='LINEOUT Output Select'
+numid=16,iface=MIXER,name='LINEOUT Switch'
+numid=6,iface=MIXER,name='LINEOUT volume'
+numid=4,iface=MIXER,name='MIC1 gain volume'
+numid=5,iface=MIXER,name='MIC2 gain volume'
+numid=10,iface=MIXER,name='audiocodec rx_sync switch'
+numid=1,iface=MIXER,name='codec hub mode'
+numid=3,iface=MIXER,name='digital volume'
+numid=9,iface=MIXER,name='headphone gain'
+```
+
+
+
