--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -344,8 +344,13 @@ numid=14,iface=MIXER,name='Headphone Switch'
 麦克风开关
 
 ```
+numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch'
+打开
 amixer cset numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch' 1
 amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 1
+关闭
+amixer cset numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch' 0
+amixer cset numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch' 0
 ```
 
 
