--- a/rv1106/zh/12-硬件功能使用说明.md
+++ b/rv1106/zh/12-硬件功能使用说明.md
@@ -115,5 +115,29 @@ mount -t debugfs none /sys/kernel/debug
 
 
 
+## sd卡
+
+```
+# fdisk -l
+Disk /dev/mmcblk0: 7456 MB, 7818182656 bytes, 15269888 sectors
+238592 cylinders, 4 heads, 16 sectors/track
+Units: sectors of 1 * 512 = 512 bytes
+
+Disk /dev/mmcblk0 doesn't contain a valid partition table
+Disk /dev/mmcblk0p1: 0 MB, 32768 bytes, 64 sectors
+1 cylinders, 4 heads, 16 sectors/track
+Units: sectors of 1 * 512 = 512 bytes
+
+Disk /dev/mmcblk0p1 doesn't contain a valid partition table
+Disk /dev/mmcblk1: 59 GB, 63218647040 bytes, 123473920 sectors
+7685 cylinders, 255 heads, 63 sectors/track
+Units: sectors of 1 * 512 = 512 bytes
+
+Device       Boot StartCHS    EndCHS        StartLBA     EndLBA    Sectors  Size Id Type
+/dev/mmcblk1p1    2,10,9      1023,254,63      32768  123473919  123441152 58.8G  7 HPFS/NTFS
+```
+
+
+
 
 
